# GATOR-Framework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: screening_config.yaml
data/: labels.csv  metrics_tab1.csv  metrics_tab2.csv  metrics_tab3.csv  metrics_tab4.csv  orbital_attention_dataset_cutoff5p0_t11765543548_t31766061592.npz
data/geometries/: Ba-TiO2-H2.xyz  Ba-TiO2.xyz  Be-TiO2-H2.xyz  Be-TiO2.xyz  Ca-TiO2-H2.xyz  Ca-TiO2.xyz  H2.xyz  Mg-TiO2-H2.xyz  Mg-TiO2.xyz  Ra-TiO2-H2.xyz  Ra-TiO2.xyz  Sr-TiO2-H2.xyz  Sr-TiO2.xyz  TiO2-H2.xyz
literature/: approved.json
modules/: __init__.py  adsorption_energies.py  adsorption_metrics.py  chemist_agent.py  electronic_calculations.py  thermodynamic_projections.py
scripts/: e3_attention_dataloader.py  run_chemist_agent.py  train_model.py  utils.py
src/gator/: __init__.py  __main__.py  adsorption_energies.py  adsorption_metrics.py  cli.py  corpus_builder.py  electronic_calculations.py  gate_engine.py  literature_retrieval.py  llm_providers.py  output_schemas.py  screening_agent.py  thermodynamic_projections.py
tests/: test_corpus_builder.py  test_gate_engine.py  test_literature_retrieval.py  test_openrouter.py  test_output_schemas.py  test_screening_agent.py
